добавил карточки моделей и комплектаций

--- a/index.html
+++ b/index.html
@@ -157,10 +157,328 @@
       </div>
     </div>
   </section>
+  <section class="models">
+    <div class="container">
+      <div class="section__upper models__upper">
+        <h2 class="section__title">Модели <span> в наличии</span></h2>
+      </div>
+      <div class="models__list">
+        <div class="models__card">
+            <div class="models__card-heads">
+              <span class="models__card-head">SPORTAGE</span>
+              <span class="models__card-model">NEW 2022</span>
+            </div>
+            <div class="models__card-prices">
+              <span class="models__card-price">от 1 012 100 ₽</span>
+              <span class="models__card-month">
+                <b>от 33 000 ₽</b>
+                <span>Платеж в кредит</span>
+              </span>
+            </div>
+            <div class="models__card-img">
+              <div class="models__card-ball">
+                <span>Ставка</span>
+                <b>4,9%</b>
+              </div>
+              <img src="./img/test-car.png" alt="car">
+              <span class="models__card-actions">взнос 0₽</span>
+              <div class="models__card-bg">
+                <svg xmlns="http://www.w3.org/2000/svg" width="344" height="98" viewBox="0 0 344 98" fill="none">
+                  <path d="M0 21.9585L442 0V36.1909L0 98V21.9585Z" fill="url(#paint0_linear_380_208)"/>
+                  <defs>
+                  <linearGradient id="paint0_linear_380_208" x1="4.5051" y1="71.2973" x2="324.365" y2="68.6565" gradientUnits="userSpaceOnUse">
+                  <stop stop-color="#0065BF"/>
+                  <stop offset="1" stop-color="#004375" stop-opacity="0"/>
+                  </linearGradient>
+                  </defs>
+                  </svg>
+              </div>
+            </div>
+            <div class="models__card-btns">
+              <button class="btn bg_main">Получить предложение</button>
+              <button class="btn border no_bg">Заявка на кредит</button>
+            </div>
+        </div>
+        <div class="models__card">
+          <div class="models__card-heads">
+            <span class="models__card-head">SPORTAGE</span>
+            <span class="models__card-model">NEW 2022</span>
+          </div>
+          <div class="models__card-prices">
+            <span class="models__card-price">от 1 012 100 ₽</span>
+            <span class="models__card-month">
+              <b>от 33 000 ₽</b>
+              <span>Платеж в кредит</span>
+            </span>
+          </div>
+          <div class="models__card-img">
+            <div class="models__card-ball">
+              <span>Ставка</span>
+              <b>4,9%</b>
+            </div>
+            <img src="./img/test-car.png" alt="car">
+            <span class="models__card-actions">взнос 0₽</span>
+            <div class="models__card-bg">
+              <svg xmlns="http://www.w3.org/2000/svg" width="344" height="98" viewBox="0 0 344 98" fill="none">
+                <path d="M0 21.9585L442 0V36.1909L0 98V21.9585Z" fill="url(#paint0_linear_380_208)"/>
+                <defs>
+                <linearGradient id="paint0_linear_380_208" x1="4.5051" y1="71.2973" x2="324.365" y2="68.6565" gradientUnits="userSpaceOnUse">
+                <stop stop-color="#0065BF"/>
+                <stop offset="1" stop-color="#004375" stop-opacity="0"/>
+                </linearGradient>
+                </defs>
+                </svg>
+            </div>
+          </div>
+          <div class="models__card-btns">
+            <button class="btn bg_main">Получить предложение</button>
+            <button class="btn border no_bg">Заявка на кредит</button>
+          </div>
+      </div>
+      <div class="models__card">
+        <div class="models__card-heads">
+          <span class="models__card-head">SPORTAGE</span>
+          <span class="models__card-model">NEW 2022</span>
+        </div>
+        <div class="models__card-prices">
+          <span class="models__card-price">от 1 012 100 ₽</span>
+          <span class="models__card-month">
+            <b>от 33 000 ₽</b>
+            <span>Платеж в кредит</span>
+          </span>
+        </div>
+        <div class="models__card-img">
+          <div class="models__card-ball">
+            <span>Ставка</span>
+            <b>4,9%</b>
+          </div>
+          <img src="./img/test-car.png" alt="car">
+          <span class="models__card-actions">взнос 0₽</span>
+          <div class="models__card-bg">
+            <svg xmlns="http://www.w3.org/2000/svg" width="344" height="98" viewBox="0 0 344 98" fill="none">
+              <path d="M0 21.9585L442 0V36.1909L0 98V21.9585Z" fill="url(#paint0_linear_380_208)"/>
+              <defs>
+              <linearGradient id="paint0_linear_380_208" x1="4.5051" y1="71.2973" x2="324.365" y2="68.6565" gradientUnits="userSpaceOnUse">
+              <stop stop-color="#0065BF"/>
+              <stop offset="1" stop-color="#004375" stop-opacity="0"/>
+              </linearGradient>
+              </defs>
+              </svg>
+          </div>
+        </div>
+        <div class="models__card-btns">
+          <button class="btn bg_main">Получить предложение</button>
+          <button class="btn border no_bg">Заявка на кредит</button>
+        </div>
+    </div>
+      </div>
+      <button class="models__list-btn btn bg_blue">Показать все</button>
+    </div>
+  </section>
+  <section class="equip">
+    <div class="container">
+      <div class="section__upper equip__upper">
+        <h2 class="section__title">Комплектации</h2>
+      </div>
+      <div class="equip__filter">
+        <div class="equip__filter-select">
+          <select name="" id="">
+            <option value="AL">Выберите модель</option>
+            <option value="">kia</option>
+            <option value="">kia</option>
+            <option value="">kia</option>
+          </select>
+        </div>
+        <div class="equip__filter-select">
+          <select name="" id="">
+            <option value="AL">Выберите комплектацию</option>
+            <option value="">kia</option>
+            <option value="">kia</option>
+            <option value="">kia</option>
+          </select>
+        </div>
+      </div>
+    </div>
+      <div class="equip__list">
+        <div class="equip__card">
+          <div class="container">
+          <span class="equip__card-name desk_hide">comfort</span>
+          <div class="equip__card-flex">
+            <div class="equip__card-images">
+              <div class="model-main__colors-container">
+                    <div class="color-select">
+                            <span class="color-active"
+                                data-color="0"
+                                data-equip="111"
+                                data-colorName="Серый"
+                                style="background: grey;">
+                            </span>
+                            <span class=""
+                            data-color="1"
+                            data-equip="111"
+                            data-colorName="Red"
+                            style="background: red;">
+                        </span>
+                        <span class=""
+                        data-color="2"
+                        data-equip="111"
+                        data-colorName="black"
+                        style="background: black;">
+                    </span>
+                    <span class=""
+                    data-color="3"
+                    data-equip="111"
+                    data-colorName="pink"
+                    style="background: grey;">
+                </span>
+                    </div>
+                    <p class="model__color">Цвет: <span>Серый</span></p>
+            </div>
+              <div class="equip__card-prices desk_hide">
+                <span class="equip__card-price">от 1 012 100 ₽</span>
+                <span class="equip__card-month">
+                  <b>от 33 000 ₽</b>
+                  <span>платеж в месяц</span>
+                </span>
+              </div>
+              <div class="models__card-swiper">
+                      <img data-equip="111" data-index="0" src="./img/test-equip.png" alt="" class="equip__card-img js-active card__img">
+                      <img data-equip="111" data-index="0" src="./img/equip-test2.webp" alt="" class="equip__card-img card__img">
+                      <img data-equip="111" data-index="0" src="./img/test-equip.png" alt="" class="equip__card-img card__img">
+                      <img data-equip="111" data-index="0" src="./img/test-equip.png" alt="" class="equip__card-img card__img">
+                  </div> 
+              </div>
+              <div class="equip__card-info">
+                <span class="equip__card-name mob_hide">comfort</span>
+                <div class="equip__card-spec">
+                  <div class="equip__card-item">
+                    <img src="./img/equip-ok.svg" alt="icon">
+                    <span>АКПП 6</span>
+                  </div>
+                  <div class="equip__card-item">
+                    <img src="./img/equip-ok.svg" alt="icon">
+                    <span>бензин аи-92</span>
+                  </div>
+                  <div class="equip__card-item">
+                    <img src="./img/equip-ok.svg" alt="icon">
+                    <span>190 л.с</span>
+                  </div>
+                  <div class="equip__card-item">
+                    <img src="./img/equip-ok.svg" alt="icon">
+                    <span>полный (4WD)</span>
+                  </div>
+                </div>
+              </div>
+              <div class="equip__card-block">
+                <div class="equip__card-prices mob_hide">
+                  <span class="equip__card-price">от 1 012 100 ₽</span>
+                  <span class="equip__card-month">
+                    <b>от 33 000 ₽</b>
+                    <span>платеж в месяц</span>
+                  </span>
+                </div>
+                <div class="equip__card-btns">
+                  <button class="equip__card-button btn bg_blue">Получить предложение</button>
+                  <button class="equip__card-button btn bg_white">Заявка на кредит</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="equip__card">
+          <div class="container">
+          <span class="equip__card-name desk_hide">comfort</span>
+          <div class="equip__card-flex">
+            <div class="equip__card-images">
+              <div class="model-main__colors-container">
+                    <div class="color-select">
+                            <span class="color-active"
+                                data-color="0"
+                                data-equip="nnn"
+                                data-colorName="Серый"
+                                style="background: grey;">
+                            </span>
+                            <span class=""
+                            data-color="1"
+                            data-equip="nnn"
+                            data-colorName="Red"
+                            style="background: red;">
+                        </span>
+                        <span class=""
+                        data-color="2"
+                        data-equip="nnn"
+                        data-colorName="black"
+                        style="background: black;">
+                    </span>
+                    <span class=""
+                    data-color="3"
+                    data-equip="nnn"
+                    data-colorName="pink"
+                    style="background: grey;">
+                </span>
+                    </div>
+                    <p class="model__color">Цвет: <span>Серый</span></p>
+            </div>
+              <div class="equip__card-prices desk_hide">
+                <span class="equip__card-price">от 1 012 100 ₽</span>
+                <span class="equip__card-month">
+                  <b>от 33 000 ₽</b>
+                  <span>платеж в месяц</span>
+                </span>
+              </div>
+              <div class="models__card-swiper">
+                      <img data-equip="nnn" data-index="0" src="./img/test-equip.png" alt="" class="equip__card-img js-active card__img">
+                      <img data-equip="nnn" data-index="0" src="./img/equip-test2.webp" alt="" class="equip__card-img card__img">
+                      <img data-equip="nnn" data-index="0" src="./img/test-equip.png" alt="" class="equip__card-img card__img">
+                      <img data-equip="nnn" data-index="0" src="./img/test-equip.png" alt="" class="equip__card-img card__img">
+                  </div> 
+              </div>
+              <div class="equip__card-info">
+                <span class="equip__card-name mob_hide">comfort</span>
+                <div class="equip__card-spec">
+                  <div class="equip__card-item">
+                    <img src="./img/equip-ok.svg" alt="icon">
+                    <span>АКПП 6</span>
+                  </div>
+                  <div class="equip__card-item">
+                    <img src="./img/equip-ok.svg" alt="icon">
+                    <span>бензин аи-92</span>
+                  </div>
+                  <div class="equip__card-item">
+                    <img src="./img/equip-ok.svg" alt="icon">
+                    <span>190 л.с</span>
+                  </div>
+                  <div class="equip__card-item">
+                    <img src="./img/equip-ok.svg" alt="icon">
+                    <span>полный (4WD)</span>
+                  </div>
+                </div>
+              </div>
+              <div class="equip__card-block">
+                <div class="equip__card-prices mob_hide">
+                  <span class="equip__card-price">от 1 012 100 ₽</span>
+                  <span class="equip__card-month">
+                    <b>от 33 000 ₽</b>
+                    <span>платеж в месяц</span>
+                  </span>
+                </div>
+                <div class="equip__card-btns">
+                  <button class="equip__card-button btn bg_blue">Получить предложение</button>
+                  <button class="equip__card-button btn bg_white">Заявка на кредит</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        </div>
+      </div>
+
+  </section>
   <script src="./libs/jquery.min.js"></script>
   <script src="./libs/masked-input.min.js"></script>
   <script src="./libs/fancybox.min.js"></script>
   <script src="./libs/select2.js"></script>
+  <script src="./libs/swiper-bundle.min.js"></script>
   <script src="./js/main.js"></script>
 </body>
 
