--- a/index.html
+++ b/index.html
@@ -19,9 +19,36 @@
       href="./css/desk-style.css"
       media="(min-width: 1025px)"
     />
-    <title>Landing page</title>
+    <title>LADA</title>
 </head>
 <body>
+  <header class="header">
+    <div class="container">
+      <div class="header__container">
+        <div class="header__logo">
+          <img src="./img/logo.svg" alt="logo" class="header__logo-img">
+        </div>
+        <a href="tel:+7 (495) 111 11-11" class="header__number-mob">
+          <img src="./img/phone-mob.svg" alt="call">
+          <span>+7 (495) 111 11-11</span>
+        </a>
+        <div class="burger">
+          <span class="burger__line line_1"></span>
+          <span class="burger__line line_2"></span>
+          <span class="burger__line line_3"></span>
+        </div>
+        <div class="header__menu">
+            <nav class="header__nav">
+              <a href="#model" class="header__nav-link">Модельный ряд</a>
+              <a href="#equip" class="header__nav-link">Комплектации</a>
+              <a href="#autocredit" class="header__nav-link">Автокредит</a>
+              <a href="#trade-in" class="header__nav-link">Trade-In</a>
+              <a href="#contact" class="header__nav-link">Контакты</a>
+            </nav>
+        </div>
+      </div>
+    </div>
+  </header>
     <script src="./libs/jquery.min.js"></script>
     <script src="./libs/masked-input.min.js"></script>
     <script src="./libs/fancybox.min.js"></script>
