--- a/index.html
+++ b/index.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/reset-style.css" />
-    <link rel="stylesheet" href="./css/swiper.min.css" />
-    <link rel="stylesheet" href="./css/fancybox.min.css" />
-    <link rel="stylesheet" href="./css/sumoselect2.css" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <link
-      rel="stylesheet"
-      href="./css/tablet-style.css"
-      media="(min-width: 768px)"
-    />
-    <link
-      rel="stylesheet"
-      href="./css/desk-style.css"
-      media="(min-width: 1025px)"
-    />
-    <title>LADA</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/reset-style.css" />
+  <link rel="stylesheet" href="./css/swiper.min.css" />
+  <link rel="stylesheet" href="./css/fancybox.min.css" />
+  <link rel="stylesheet" href="./css/sumoselect2.css" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="./css/tablet-style.css" media="(min-width: 768px)" />
+  <link rel="stylesheet" href="./css/desk-style.css" media="(min-width: 1025px)" />
+  <title>LADA</title>
 </head>
+
 <body>
   <header class="header">
     <div class="container">
@@ -38,21 +32,100 @@
           <span class="burger__line line_3"></span>
         </div>
         <div class="header__menu">
-            <nav class="header__nav">
-              <a href="#model" class="header__nav-link">Модельный ряд</a>
-              <a href="#equip" class="header__nav-link">Комплектации</a>
-              <a href="#autocredit" class="header__nav-link">Автокредит</a>
-              <a href="#trade-in" class="header__nav-link">Trade-In</a>
-              <a href="#contact" class="header__nav-link">Контакты</a>
-            </nav>
+          <nav class="header__nav">
+            <a href="#model" class="header__nav-link active">Модельный ряд</a>
+            <a href="#equip" class="header__nav-link">Комплектации</a>
+            <a href="#autocredit" class="header__nav-link">Автокредит</a>
+            <a href="#trade-in" class="header__nav-link">Trade-In</a>
+            <a href="#contact" class="header__nav-link">Контакты</a>
+          </nav>
+          <div class="header__menu-info">
+            <ul class="header__menu-list">
+              <li class="header__menu-item">
+                <img src="./img/clock.svg" alt="icon">
+                <span>Ежедневно с 8:00 до 21:00</span>
+              </li>
+              <li class="header__menu-item">
+                <a class="header__menu-link" href="tel:+7 (495) 111 11-11">
+                  <img src="./img/phone-mob.svg" alt="icon">
+                  <span>+7 (495) 111 11-11</span>
+                </a>
+              </li>
+              <li class="header__menu-item">
+                <img src="./img/local.svg" alt="icon">
+                <span>27 км МКАД (внешняя сторона)</span>
+              </li>
+            </ul>
+          </div>
+          <button class="btn header__menu-btn bg_orange">
+            <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 0 19 19" fill="none">
+              <path d="M12.6665 1.58333V6.33333H17.4165" stroke="white" stroke-linecap="round" stroke-linejoin="round" />
+              <path d="M18.2082 0.791672L12.6665 6.33334" stroke="white" stroke-linecap="round" stroke-linejoin="round" />
+              <path d="M17.4166 13.395V15.77C17.4175 15.9905 17.3724 16.2087 17.284 16.4107C17.1957 16.6127 17.0662 16.7941 16.9037 16.9431C16.7412 17.0922 16.5494 17.2057 16.3406 17.2763C16.1317 17.3469 15.9104 17.3732 15.6908 17.3533C13.2547 17.0886 10.9147 16.2562 8.85872 14.9229C6.94591 13.7074 5.32419 12.0857 4.10872 10.1729C2.77078 8.10762 1.93816 5.7562 1.6783 3.30916C1.65852 3.09024 1.68454 2.8696 1.7547 2.66128C1.82486 2.45297 1.93763 2.26154 2.08582 2.0992C2.23402 1.93685 2.4144 1.80714 2.61547 1.71833C2.81654 1.62951 3.0339 1.58354 3.25372 1.58333H5.62872C6.01292 1.57955 6.38539 1.7156 6.6767 1.96613C6.96801 2.21665 7.15828 2.56456 7.21205 2.945C7.31229 3.70505 7.4982 4.45132 7.76622 5.16958C7.87273 5.45294 7.89578 5.76089 7.83264 6.05694C7.7695 6.353 7.62282 6.62475 7.40997 6.84L6.40455 7.84541C7.53153 9.82739 9.17258 11.4684 11.1546 12.5954L12.16 11.59C12.3752 11.3771 12.647 11.2305 12.943 11.1673C13.2391 11.1042 13.547 11.1272 13.8304 11.2337C14.5486 11.5018 15.2949 11.6877 16.055 11.7879C16.4395 11.8422 16.7907 12.0359 17.0418 12.3322C17.2929 12.6285 17.4263 13.0067 17.4166 13.395Z" stroke="white" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+            <span>Заказать звонок</span>
+          </button>
         </div>
       </div>
     </div>
   </header>
-    <script src="./libs/jquery.min.js"></script>
-    <script src="./libs/masked-input.min.js"></script>
-    <script src="./libs/fancybox.min.js"></script>
-    <script src="./libs/select2.js"></script>
-    <script src="./js/main.js"></script>
+  <section class="main-banner">
+    <div class="container">
+      <div class="main-banner__container">
+        <h1 class="main-banner__title">
+          Спецпредложение на все
+          модели <span class="text_color">Lada</span>
+        </h1>
+        <div class="">
+          <div class="main-banner__actions">
+            <div class="main-banner__actions-item">
+              <img src="./img/percent.svg" alt="icon">
+              <span>Скидки до <b> 400 000₽</b></span>
+            </div>
+            <div class="main-banner__actions-item">
+              <img src="./img/garant.svg" alt="icon">
+              <span>Гарантия <b>5 лет или
+                  150 000 км</b></span>
+            </div>
+            <div class="main-banner__actions-item">
+              <img src="./img/discount.svg" alt="icon">
+              <span>Доп. скидка за кредит <b> до 70 000₽</b></span>
+            </div>
+          </div>
+          <div class="main-banner__timer">
+            <span class="main-banner__text">
+              до повышения
+              цен осталось:
+            </span>
+            <div class="timer">
+              <div class="time-count__item time-count__days">
+                <div class="time-count__val">00</div>
+                <span class="time-count__text">дней</span>
+              </div>
+              <div class="time-count__item time-count__hours">
+                <div class="time-count__val">00</div>
+                <span class="time-count__text">часов</span>
+              </div>
+              <div class="time-count__item time-count__minutes">
+                <div class="time-count__val">00</div>
+                <span class="time-count__text">минут</span>
+              </div>
+              <div class="time-count__item time-count__seconds">
+                <div class="time-count__val">00</div>
+                <span class="time-count__text">секунд</span>
+              </div>
+            </div>
+            <button class="btn bg_orange main-banner__btn">Оставить заявку</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <script src="./libs/jquery.min.js"></script>
+  <script src="./libs/masked-input.min.js"></script>
+  <script src="./libs/fancybox.min.js"></script>
+  <script src="./libs/select2.js"></script>
+  <script src="./js/main.js"></script>
 </body>
+
 </html>
