added models and equips

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </nav>
           <div class="header__menu-info">
             <ul class="header__menu-list">
-              <li class="header__menu-item">
+              <li class="header__menu-item mob_hide">
                 <img src="./img/clock.svg" alt="icon">
                 <span>Ежедневно с 8:00 до 21:00</span>
               </li>
@@ -76,7 +76,7 @@
           Спецпредложение на все
           модели <span class="text_color">Lada</span>
         </h1>
-        <div class="">
+        <div class="main-banner__block">
           <div class="main-banner__actions">
             <div class="main-banner__actions-item">
               <img src="./img/percent.svg" alt="icon">
@@ -121,7 +121,312 @@
       </div>
     </div>
   </section>
+  <section class="models">
+    <div class="container">
+      <div class="section__upper models__upper">
+        <h2 class="section__title">Модельный ряд</h2>
+        <div class="models__swiper mob_hide">
+          <div class="swiper swiper-models-name">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <a href="#" class="model__swiper-text">Lada Niva Trave</a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#" class="model__swiper-text">Lada Granta</a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#" class="model__swiper-text">Lada Vesta</a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#" class="model__swiper-text">Lada Largus</a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#" class="model__swiper-text">Lada Niva Legend</a>
+              </div>
+            </div>
+            <div class="swiper-button-next"></div>
+          </div>
+        </div>
+      </div>
+      <div class="models__swiper desk_hide">
+        <div class="swiper swiper-models-name">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <a href="#" class="model__swiper-text">Lada Niva Trave</a>
+            </div>
+            <div class="swiper-slide">
+              <a href="#" class="model__swiper-text">Lada Granta</a>
+            </div>
+            <div class="swiper-slide">
+              <a href="#" class="model__swiper-text">Lada Vesta</a>
+            </div>
+            <div class="swiper-slide">
+              <a href="#" class="model__swiper-text">Lada Largus</a>
+            </div>
+            <div class="swiper-slide">
+              <a href="#" class="model__swiper-text">Lada Niva Legend</a>
+            </div>
+          </div>
+          <div class="swiper-button-next"></div>
+        </div>
+      </div>
+      <div class="models__container">
+        <div class="models__card">
+          <span class="models__card-name">Lada Granta Седан</span>
+          <div class="models__card-container">
+            <div class="models__card-images">
+              <div class="models__card-colors">
+                <span class="models__card-color-name">Выбранный цвет: <b class="js_color_name"> Серый</b></span>
+                <div class="models__colors model__color">
+                  <span class="models__colors-bg color-active" style="background-color: red;" data-color="1" data-colorname="red"></span>
+                  <span class="models__colors-bg" style="background-color: black;" data-color="2" data-colorname="Black"></span>
+                  <span class="models__colors-bg" style="background-color: pink;" data-color="3" data-colorname="Pink"></span>
+                </div>
+              </div>
+              <div class="models__card-swiper">
+                <div class="swiper modelSwiper">
+                  <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                      <img src="./img/test-model.png" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="./img/test-model.png" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="./img/test-model.png" alt="">
+                    </div>
+                  </div>
+                  <div class="swiper-pagination"></div>
+                </div>
+              </div>
+              <div class="models__card-prices desk_hide">
+                <span class="model__price-flex models__price-old">1 885 000 ₽</span>
+                <span class="model__price-flex models__price"><span>Цена от</span> <span class="text_color"> 1 687 000 ₽</span></span>
+                <span class="model__price-flex models__price-month"><span>Платеж от </span> 12 000 ₽/мес</span>
+              </div>
+            </div>
+            <div class="models__card-info">
+              <ul class="models__card-list">
+                <li class="model__card-item">
+                  <span><b>льготная ставка от 4,9%</b></span>
+                </li>
+                <li class="model__card-item">
+                  <span><b>без</b> первоначального взноса</span>
+                </li>
+                <li class="model__card-item">
+                  <span>выгода по Trade-In <b> до 300 000 ₽ </b></span>
+                </li>
+                <li class="model__card-item">
+                  <span><b>КАСКО </b> в подарок</span>
+                </li>
+              </ul>
+            </div>
+            <div class="models__card-btns">
+              <div class="models__card-prices mob_hide">
+                <span class="model__price-flex models__price-old">1 885 000 ₽</span>
+                <span class="model__price-flex models__price"><span>Цена от</span> <span class="text_color"> 1 687 000 ₽</span></span>
+                <span class="model__price-flex models__price-month"><span>Платеж от</span> 12 000 ₽/мес</span>
+              </div>
+              <button class="btn bg_orange model">Получить предложение</button>
+              <button class="btn border model">Купить в кредит</button>
+            </div>
+          </div>
+        </div>
+        <div class="models__card">
+          <span class="models__card-name">Lada Granta Седан</span>
+          <div class="models__card-container">
+            <div class="models__card-images">
+              <div class="models__card-colors">
+                <span class="models__card-color-name">Выбранный цвет: <b class="js_color_name"> Серый</b></span>
+                <div class="models__colors model__color">
+                  <span class="models__colors-bg color-active" style="background-color: red;" data-color="1" data-colorname="red"></span>
+                  <span class="models__colors-bg" style="background-color: black;" data-color="2" data-colorname="Black"></span>
+                  <span class="models__colors-bg" style="background-color: pink;" data-color="3" data-colorname="Pink"></span>
+                </div>
+              </div>
+              <div class="models__card-swiper">
+                <div class="swiper modelSwiper">
+                  <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                      <img src="./img/test-model.png" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="./img/test-model.png" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                      <img src="./img/test-model.png" alt="">
+                    </div>
+                  </div>
+                  <div class="swiper-pagination"></div>
+                </div>
+              </div>
+              <div class="models__card-prices desk_hide">
+                <span class="model__price-flex models__price-old">1 885 000 ₽</span>
+                <span class="model__price-flex models__price"><span>Цена от</span> <span class="text_color"> 1 687 000 ₽</span></span>
+                <span class="model__price-flex models__price-month"><span>Платеж от </span> 12 000 ₽/мес</span>
+              </div>
+            </div>
+            <div class="models__card-info">
+              <ul class="models__card-list">
+                <li class="model__card-item">
+                  <span><b>льготная ставка от 4,9%</b></span>
+                </li>
+                <li class="model__card-item">
+                  <span><b>без</b> первоначального взноса</span>
+                </li>
+                <li class="model__card-item">
+                  <span>выгода по Trade-In <b> до 300 000 ₽ </b></span>
+                </li>
+                <li class="model__card-item">
+                  <span><b>КАСКО </b> в подарок</span>
+                </li>
+              </ul>
+            </div>
+            <div class="models__card-btns">
+              <div class="models__card-prices mob_hide">
+                <span class="model__price-flex models__price-old">1 885 000 ₽</span>
+                <span class="model__price-flex models__price"><span>Цена от</span> <span class="text_color"> 1 687 000 ₽</span></span>
+                <span class="model__price-flex models__price-month"><span>Платеж от </span>12 000 ₽/мес</span>
+              </div>
+              <button class="btn bg_orange model">Получить предложение</button>
+              <button class="btn border model">Купить в кредит</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="equips">
+    <div class="container">
+      <div class="section__upper">
+        <h2 class="section__title">Комплектации</h2>
+      </div>
+      <div class="equips__filter">
+        <div class="">
+          <div class="equips__select">
+            <select name="" id="">
+              <option value="">Модель</option>
+              <option value="Exeed">Exeed</option>
+              <option value="Exeed">Exeed</option>
+            </select>
+          </div>
+        </div>
+        <div class="">
+          <div class="equips__select">
+            <select name="" id="">
+              <option value="">Комплектация</option>
+              <option value="Exeed">Exeed</option>
+              <option value="Exeed">Exeed</option>
+            </select>
+          </div>
+        </div>
+      </div>
+      <div class="equips__container">
+        <div class="equips__card">
+          <div class="equips__card-text">
+            <span class="equips__card-model">Lada Granta Sedan</span>
+            <span class="equips__card-name text_color">1.6 MT Classic 1.6 л</span>
+          </div>
+          <div class="equips__card-container">
+            <div class="equips__img">
+              <img src="./img/test-equips.png" alt="">
+            </div>
+            <div class="equips__info">
+              <div class="equips__info-item">
+                <img src="./img/priv.svg" alt="icon">
+                <span>Полный (4WD)</span>
+              </div>
+              <div class="equips__info-item flex_end">
+                <img src="./img/go-go.svg" alt="icon">
+                <span>190 л.с.</span>
+              </div>
+              <div class="equips__info-item">
+                <img src="./img/benz.svg" alt="icon">
+                <span>Бензин</span>
+              </div>
+              <div class="equips__info-item flex_end">
+                <img src="./img/kpp.svg" alt="icon">
+                <span>АКПП 6</span>
+              </div>
+            </div>
+            <div class="equips__card-btns">
+              <div class="equips__card-prices">
+                <span class="equips__price-old">1 885 000 ₽</span>
+                <span class="equips__price">
+                  <span>Цена от</span>
+                  <b> 1 687 000 ₽</b>
+                </span>
+              </div>
+              <button class="btn bg_orange equips__card-btn">Получить предложение</button>
+              <button class="btn border equips__card-btn">Купить в кредит</button>
+            </div>
+          </div>
+          <svg xmlns="http://www.w3.org/2000/svg" width="965" height="1" viewBox="0 0 965 1" fill="none">
+            <path d="M0 0.5H965" stroke="url(#paint0_linear_119_66)" />
+            <defs>
+              <linearGradient id="paint0_linear_119_66" x1="933" y1="1.00741" x2="31" y2="1.01844" gradientUnits="userSpaceOnUse">
+                <stop offset="0.00520833" stop-color="#4C5865" stop-opacity="0" />
+                <stop offset="0.567708" stop-color="#4C5865" />
+                <stop offset="1" stop-color="#4C5865" stop-opacity="0" />
+              </linearGradient>
+            </defs>
+          </svg>
+        </div>
+        <div class="equips__card">
+          <div class="equips__card-text">
+            <span class="equips__card-model">Lada Granta Sedan</span>
+            <span class="equips__card-name text_color">1.6 MT Classic 1.6 л</span>
+          </div>
+          <div class="equips__card-container">
+            <div class="equips__img">
+              <img src="./img/test-equips.png" alt="">
+            </div>
+            <div class="equips__info">
+              <div class="equips__info-item">
+                <img src="./img/priv.svg" alt="icon">
+                <span>Полный (4WD)</span>
+              </div>
+              <div class="equips__info-item flex_end">
+                <img src="./img/go-go.svg" alt="icon">
+                <span>190 л.с.</span>
+              </div>
+              <div class="equips__info-item">
+                <img src="./img/benz.svg" alt="icon">
+                <span>Бензин</span>
+              </div>
+              <div class="equips__info-item flex_end">
+                <img src="./img/kpp.svg" alt="icon">
+                <span>АКПП 6</span>
+              </div>
+            </div>
+            <div class="equips__card-btns">
+              <div class="equips__card-prices">
+                <span class="equips__price-old">1 885 000 ₽</span>
+                <span class="equips__price">
+                  <span>Цена от</span>
+                  <b> 1 687 000 ₽</b>
+                </span>
+              </div>
+              <button class="btn bg_orange equips__card-btn">Получить предложение</button>
+              <button class="btn border equips__card-btn">Купить в кредит</button>
+            </div>
+          </div>
+          <svg xmlns="http://www.w3.org/2000/svg" width="965" height="1" viewBox="0 0 965 1" fill="none">
+            <path d="M0 0.5H965" stroke="url(#paint0_linear_119_66)" />
+            <defs>
+              <linearGradient id="paint0_linear_119_66" x1="933" y1="1.00741" x2="31" y2="1.01844" gradientUnits="userSpaceOnUse">
+                <stop offset="0.00520833" stop-color="#4C5865" stop-opacity="0" />
+                <stop offset="0.567708" stop-color="#4C5865" />
+                <stop offset="1" stop-color="#4C5865" stop-opacity="0" />
+              </linearGradient>
+            </defs>
+          </svg>
+        </div>
+      </div>
+    </div>
+  </section>
   <script src="./libs/jquery.min.js"></script>
+  <script src="./libs/swiper-bundle.min.js"></script>
   <script src="./libs/masked-input.min.js"></script>
   <script src="./libs/fancybox.min.js"></script>
   <script src="./libs/select2.js"></script>
