--- a/index.html
+++ b/index.html
@@ -425,6 +425,116 @@
       </div>
     </div>
   </section>
+  <section class="credit banner">
+    <div class="container">
+      <h2 class="banner__title credit__title">
+        <span class="text_color">Lada</span> в кредит по 
+        условиям 2022 года!
+      </h2>
+      <ul class="banner__list">
+        <li class="banner__list-item">
+          ставка по кредиту <b>от 4,9%</b>
+        </li>
+        <li class="banner__list-item">
+          первоначальный взнос от <b> 0₽</b>
+        </li>
+        <li class="banner__list-item">
+          одобрение <b> 98%</b>
+        </li>
+        <li class="banner__list-item">
+          гарантия <b>5 лет</b> или <b>КАСКО</b> в подарок
+        </li>
+      </ul>
+      <form action="" class="banner__form credit__form">
+        <div class="banner__inputs">
+          <input  type="text" class="input banner__input" name="name" placeholder="Имя">
+          <input  type="tel" name="phone" required class="input banner__input" placeholder="+ 7 (495) 111-11-11">
+        </div>
+        <button class="btn banner__btn credit__btn bg_orange">Получить предложение</button>
+        <div class="form-checkbox">
+          <label for="checkbox__input-text">
+            <span class="checkbox">
+              <input class="form__input-check" type="checkbox" id="check-credit-pop" checked="" required="">
+              <span class="custom-checkbox"></span>
+            </span>
+            <span class="checkbox-text">
+              Вы даете согласие на обработку <a href="/policy" class="checkbox-link">персональных данных</a>
+            </span>
+          </label>
+        </div>
+      </form>
+    </div>
+  </section>
+  <section class="contacts">
+    <div class="contacts__map">
+      <div class="contacts__bg">
+        <div class="container">
+          <div class="contacts__info">
+            <div class="contacts__flex">
+              <img class="contacts__logo" src="./img/cont-logo.svg" alt="logo">
+              <ul class="contacts__info-list">
+                <li class="contacts__info-item">
+                  <img src="./img/con_clock.svg" alt="icon">
+                  <span>Ежедневно с 8:00 до 21:00</span>
+                </li>
+                <li class="contacts__info-item">
+                  <img src="./img/con_call.svg" alt="icon">
+                  <span>+7 (495) 111 11-11</span>
+                </li>
+                <li class="contacts__info-item">
+                  <img src="./img/con_pin.svg" alt="icon">
+                  <span>27 км МКАД 6 стр 6 
+                    (внешняя сторона)</span>
+                </li>
+              </ul>
+            </div>
+            <button class="btn bg_orange contacts__btn">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+                <g clip-path="url(#clip0_11_459)">
+                  <path d="M10.6667 1.3335V5.3335H14.6667" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+                  <path d="M15.3333 0.666504L10.6667 5.33317" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+                  <path d="M14.6667 11.2802V13.2802C14.6674 13.4659 14.6294 13.6497 14.555 13.8198C14.4806 13.9899 14.3715 14.1426 14.2347 14.2681C14.0979 14.3937 13.9364 14.4892 13.7605 14.5487C13.5846 14.6082 13.3983 14.6303 13.2133 14.6136C11.1619 14.3907 9.19134 13.6897 7.46001 12.5669C5.84923 11.5433 4.48356 10.1777 3.46001 8.56689C2.33333 6.8277 1.63217 4.84756 1.41334 2.78689C1.39668 2.60254 1.41859 2.41673 1.47767 2.24131C1.53676 2.06589 1.63172 1.90469 1.75652 1.76797C1.88131 1.63126 2.03321 1.52203 2.20253 1.44724C2.37186 1.37245 2.5549 1.33374 2.74001 1.33356H4.74001C5.06354 1.33038 5.3772 1.44495 5.62251 1.65592C5.86783 1.86689 6.02806 2.15986 6.07334 2.48023C6.15775 3.12027 6.31431 3.74871 6.54001 4.35356C6.6297 4.59218 6.64911 4.8515 6.59594 5.10081C6.54277 5.35012 6.41925 5.57897 6.24001 5.76023L5.39334 6.60689C6.34238 8.27592 7.72431 9.65786 9.39334 10.6069L10.24 9.76023C10.4213 9.58099 10.6501 9.45746 10.8994 9.40429C11.1487 9.35112 11.4081 9.37053 11.6467 9.46023C12.2515 9.68593 12.88 9.84248 13.52 9.92689C13.8439 9.97258 14.1396 10.1357 14.351 10.3852C14.5624 10.6348 14.6748 10.9533 14.6667 11.2802Z" stroke="white" stroke-linecap="round" stroke-linejoin="round"/>
+                </g>
+                <defs>
+                  <clipPath id="clip0_11_459">
+                    <rect width="16" height="16" fill="white"/>
+                  </clipPath>
+                </defs>
+              </svg>
+              <span>Заказать звонок</span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__container">
+        <div class="footer__links">
+          <a href="" class="footer__text bold">Условия кредитования</a>
+          <a href="" class="footer__text bold">Пользовательское соглашение</a>
+          <a href="" class="footer__text bold">Политика конфиденциальности</a>
+        </div>
+        <p class="footer__text bold basis">
+          ОБЩЕСТВО С ОГРАНИЧЕННОЙ ОТВЕТСТВЕННОСТЬЮ "МК СМАРТИНВЕСТ"
+ИНН 9725002820, ОГРН 1197746118206 от 18 февраля 2019 г., Юр. Адрес: 115114, город Москва, Дербеневская наб, д. 7 стр. 2, этаж 3 офис 52
+Обращаем ваше внимание на то, что данный интернет-сайт носит исключительно информационный характер и ни при каких условиях не является публичной офертой, определяемой положением ч. 2 ст. 437 Гражданского кодекса Российской Федерации.
+        </p>
+        <div class="footer__info">
+          <p class="footer__text">
+            Обращаем ваше внимание на то, что данный интернет-сайт носит исключительно информационный характер и ни при каких условиях не является публичной офертой, определяемой положением ч. 2 ст. 437 Гражданского кодекса Российской Федерации.
+          </p>
+          <button class="footer__btn js_footer_info_toggle">Подробнее</button>
+        </div>
+      </div>
+      <div class="footer__info-toggle">
+        <p class="footer__text">
+          Обращаем ваше внимание на то, что данный Интернет-сайт носит исключительно информационный характер и ни при каких условиях не является публичной офертой, определяемой положениями Статьи 437 Гражданского кодекса Российской Федерации. Для получения подробной информации о стоимости автомобилей обращайтесь к менеджерам по продажам. Любая информация, содержащаяся на настоящем сайте, носит исключительно справочный характер и ни при каких обстоятельствах не может быть расценена как предложение заключить договор (публичная оферта). Дилер не дает гарантий по поводу своевременности, точности и полноты информации на веб-сайте, а также по поводу беспрепятственного доступа к нему в любое время. Технические характеристики и оборудование автомобилей, условия приобретения автомобилей, цены, спецпредложения и комплектации автомобилей, указанные на сайте, приведены для примера и могут быть изменены в любое время без предварительного уведомления. Для получения подробной информации об актуальных ценах на продукцию и наличии автомобилей обращайтесь в дилерский центр. Приобретение любой продукции бренда осуществляется в соответствии с условиями индивидуального договора купли-продажи. Представленное изображение автомобиля может отличаться от реализуемого. Не является публичной офертой. ПТС - Паспорт транспортного средства. На данном сайте используются зарегистрированные товарные знаки, перечисленные в разделе Правовая информация. Указана цена на автомобиль в начальной комплектации на автомобили 2022 модельного года. Для заказов с подтвержденной производственной к.н. 50/2021. Количество автомобилей ограничено. Размер платежа в день означает величину затрат заемщика, эквивалентную ежемесячному платежу при условии 30 (тридцати) календарных дней в месяце, взявшего кредит по программе кредитования ВТБ, Сетелем, Русфинанс Банк, Банк Союз, Экспобанк, Совкомбанк, Альфа Банк, Тинькофф, Плюсбанк, Банк Оранжевый, Росбанк, Ситибанк, (далее – «Банк») на покупку нового автомобиля с расчетной розничной ценой в начально комплектации, на срок 60 мес., с первоначальным взносом 57,92% от стоимости автомобиля, остаточным платежом (далее ОП) 20% от стоимости автомобиля и процентной ставкой 14,5%. Данная информация не является офертой Банка, расчет является приблизительным. Полная стоимость кредита и конкретные параметры кредита будут рассчитаны на основании Анкеты клиента, направляемой в Банк для одобрения кредитной заявки. Основные условия кредитования ВТБ, Сетелем, Русфинанс Банк, Банк Союз, Экспобанк, Совкомбанк, Альфа Банк, Тинькофф, Плюсбанк, Банк Оранжевый, Росбанк, Ситибанк, (далее Банк) на покупку нового автомобиля по продукту «Кредит с остаточным платежом на приобретение нового автомобиля» валюта кредита – рубли РФ; сумма кредита от 120 тыс. до 5.8 млн. ₽ Процентная ставка (в % годовых) при сроке от 12 до 60 мес. – 14,5% при первоначальном взносе (далее ПВ) от 15% (включительно). При ПВ менее 20% необходимо предоставление полного пакета документов. Минимальный размер остаточного платежа (далее ОП) в % от стоимости автомобиля – 20%; максимальный размер ОП при сроке при сроке кредита 12 мес. – 60%, при сроках от 13 до 24 мес. – 50%, при сроках от 25 до 36 мес. – 45%, при сроках от 37 до 48 мес. – 30%, при сроках от 49 до 60 мес. – 20%. Обеспечение по кредиту – залог приобретаемого автомобиля. Условия кредита действительны до 01.06.2022 и могут быть изменены Банком. Лицензия ЦБ РФ № 3500, г. Москва.
+        </p>
+      </div>
+    </div>
+  </footer>
   <script src="./libs/jquery.min.js"></script>
   <script src="./libs/swiper-bundle.min.js"></script>
   <script src="./libs/masked-input.min.js"></script>
